jiraID:MAR-10918, footer alignment fix

--- a/ThreeSixtyOneView/app/styles/scss/footer.scss
+++ b/ThreeSixtyOneView/app/styles/scss/footer.scss
@@ -6,28 +6,37 @@
     height: 50px;
     .footer-wrapper {
         max-width: $app_max_width;
-        min-width: $app_min_width;
+        min-width: $content_min_width;
         margin: 0 auto;
-        .footer-left {
+        .footer-left, .footer-center, .footer-right {
+            display: table;
             height: 50px;
-            padding: 5px 15px;
-            .icon {
-                width: 200px;
-                height: 40px;
+        }
+        .footer-left {
+            .icon-container {
+                display: table-cell;
+                vertical-align: middle;
+                .icon {
+                    width: 200px;
+                    height: 40px;
+                }
             }
         }
         .footer-center {
-            height: 50px;
             ul {
                 width: 350px;
                 font-size: 14px;
-                margin: 0 auto;
                 float: none;
+                text-align: center;
+                display: table-cell;
+                vertical-align: middle;
                 li {
+                    float: none;
+                    display: inline-block;
                     &:after {
                         content: '';
                         position: absolute;
-                        bottom: 18px;
+                        bottom: 3px;
                         right: 0;
                         height: 14px;
                         border-right: 1px solid $ms-gray;
@@ -38,7 +47,6 @@
                     a {
                         padding: 0 15px;
                         color: $ms-gray;
-                        line-height: 50px;
                         &:hover {
                             background-color: transparent;
                             text-decoration: underline;
@@ -49,9 +57,10 @@
             }
         }
         .footer-right {
-            height: 50px;
             text-align: right;
             a {
+                display: table-cell;
+                vertical-align: middle;
                 color: $ms-gray;
                 &:hover { color: $ms-white; }
                 i {
